# linux_dev_2025

./: README.md
01_TerminalProject/: Makefile  Show.c
02_Multifile/: Makefile  prog.c
03_Text/: randomize.sh
04_Debugging/: Makefile  gdb_test1.gdb  gdb_test2.gdb  range.c
05_Regexps/: Makefile  esub.c  test.sh
07_Environmental/: configure.ac
07_Environmental/src/: Makefile.am  rhasher.c
08_I18n/: CMakeLists.txt  Makefile
08_I18n/po/: ru.po
08_I18n/src/: guess.c
09_PatchDiff/: 1.patch  2.patch  3.patch  Makefile  main.c
10_LibTesting/: configure.ac
10_LibTesting/src/: Makefile.am  grow.h  libgrow.c
10_LibTesting/tests/: Makefile.am  tests.c
